@@ -1,0 +1,231 @@
+<!--
+   Licensed to the Apache Software Foundation (ASF) under one or more
+   contributor license agreements.  See the NOTICE file distributed with
+   this work for additional information regarding copyright ownership.
+   The ASF licenses this file to You under the Apache License, Version 2.0
+   (the "License"); you may not use this file except in compliance with
+   the License.  You may obtain a copy of the License at
+
+       http://www.apache.org/licenses/LICENSE-2.0
+
+   Unless required by applicable law or agreed to in writing, software
+   distributed under the License is distributed on an "AS IS" BASIS,
+   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+   See the License for the specific language governing permissions and
+   limitations under the License.
+-->
+
+<project name="TestHarnessPigTests" default="test">
+
+  <property name="pig.dir" value="${basedir}/../../.."/>
+  <property name="pig.jar" value="${pig.dir}/pig.jar"/>
+  <property name="jython.jar"
+    value="${pig.dir}/build/ivy/lib/Pig/jython-2.5.0.jar"/>
+
+  <!-- Separate property name for udfs' build.xml -->
+  <property name="pig.jarfile" value="${pig.jar}"/>
+  <property name="udf.dir" value="${basedir}/udfs"/>
+  <property name="udf.java.dir" value="${udf.dir}/java"/>
+  <property name="udf.jar" value="${udf.java.dir}/testudf.jar"/>
+  <property name="python.udf.dir" value="${udf.dir}/python"/>
+  <property name="params.dir" value="${basedir}/paramfiles"/>
+  <property name="lib.dir" value="${basedir}/lib"/>
+  <property name="streaming.dir" value="${basedir}/streaming"/>
+
+  <property name="tar.name" value="${basedir}/pigtests.tar"/>
+  <property name="tar.dir" value="${basedir}/tar"/>
+  <property name="test.src" value="${basedir}/tests"/>
+  <property name="driver.src" value="${basedir}/drivers"/>
+  <property name="deployer.src" value="${basedir}/deployers"/>
+  <property name="conf.src" value="${basedir}/conf"/>
+  <property name="tool.src" value="${basedir}/tools"/>
+
+  <property name="harness.dir" value="${basedir}/../harness"/>
+  <property name="harness.tar" value="${harness.dir}/pigharness.tar"/>
+
+  <property name="test.location" value="${basedir}/testdist"/>
+  <property name="benchmark.location" value="${test.location}/benchmarks"/>
+
+
+  <!-- Build the UDFs -->
+  <target name="pig-jar-available">
+    <available property="pig.jar.available" file="${pig.jar}"/>
+    <fail message="You must build the main Pig jar before running these tests"
+        unless="pig.jar.available"/>
+  </target>
+
+  <target name="udfs" depends="pig-jar-available">
+    <ant dir="${udf.java.dir}"/>
+  </target>
+
+  <!-- Build an archive to use in the tests -->
+  <target name="tar" description="Create tar file with pig modules">
+    <mkdir dir="${tar.dir}"/>
+    <mkdir dir="${tar.dir}/tests"/>
+    <mkdir dir="${tar.dir}/drivers"/>
+    <mkdir dir="${tar.dir}/deployers"/>
+    <mkdir dir="${tar.dir}/conf"/>
+    <mkdir dir="${tar.dir}/libexec"/>
+    <mkdir dir="${tar.dir}/libexec/PigTest"/>
+    <mkdir dir="${tar.dir}/libexec/PigTest/test"/>
+    <mkdir dir="${tar.dir}/libexec/PigTest/generate"/>
+    <mkdir dir="${tar.dir}/libexec/python"/>
+    <mkdir dir="${tar.dir}/lib"/>
+    <mkdir dir="${tar.dir}/lib/java"/>
+    <mkdir dir="${tar.dir}/paramfiles"/>
+
+    <copy todir="${tar.dir}/tests">
+        <fileset dir="${test.src}">
+          <exclude name="bigdata.conf"/>
+          <exclude name="grunt.conf"/>
+          <exclude name="streaming_local.conf"/>
+        </fileset>
+    </copy>
+
+    <copy todir="${tar.dir}">
+      <fileset dir="${driver.src}">
+        <exclude name="TestDriverScript.pm"/>
+      </fileset>
+      <fileset dir="${deployer.src}"/>
+    </copy>
+
+
+    <copy todir="${tar.dir}/conf">
+      <fileset dir="${conf.src}"/>
+    </copy>
+
+    <copy todir="${tar.dir}/libexec/PigTest">
+      <fileset dir="${tool.src}/test"/>
+      <fileset dir="${tool.src}/generate"/>
+    </copy>
+
+    <copy todir="${tar.dir}/lib">
+      <fileset dir="${lib.dir}"/>
+    </copy>
+
+    <copy todir="${tar.dir}/lib/java">
+      <fileset file="${udf.jar}"/>
+    </copy>
+
+    <copy todir="${tar.dir}/libexec">
+      <fileset dir="${streaming.dir}"/>
+    </copy>
+
+    <copy todir="${tar.dir}/libexec/python">
+      <fileset dir="${python.udf.dir}"/>
+    </copy>
+
+    <copy todir="${tar.dir}/paramfiles">
+      <fileset file="${params.dir}/params_3"/>
+    </copy>
+
+    <tar destfile="${tar.name}" basedir="${tar.dir}"/>
+  </target>
+
+  <!-- Get the tarball for the harness -->
+  <target name="build-harness">
+    <ant dir="${harness.dir}" inheritAll="false"/>
+  </target>
+
+  <!-- Check that the necessary properties are setup -->
+  <target name="property-check">
+    <fail message="Please set the property pig.harness.old.pig to the directory where your old version of Pig is installed"
+      unless="pig.harness.old.pig"/>
+    <fail message="Please set the property pig.harness.cluster to the directory of your hadoop installation"
+      unless="pig.harness.cluster"/>
+  </target>
+
+  <!-- Prep the test area -->
+  <target name="init-test" depends="build-harness">
+    <mkdir dir="${test.location}"/>
+    <mkdir dir="${benchmark.location}"/>
+
+    <untar src="${tar.name}" dest="${test.location}"/>
+    <untar src="${harness.tar}" dest="${test.location}"/>
+
+    <chmod perm="ugo+x" type="file">
+      <fileset dir="${test.location}/libexec" />
+      <fileset file="${test.location}/pig_test_harness.pl"/>
+    </chmod>
+
+  </target>
+
+
+  <target name="test" depends="property-check, udfs, tar, init-test">
+    <!-- If they have not specified tests to run then null it out -->
+    <property name="tests.to.run" value=""/>
+
+    <exec executable="./pig_test_harness.pl" dir="${test.location}">
+      <env key="PIG_HARNESS_ROOT" value="."/>
+      <env key="PH_LOCAL" value="."/>
+      <env key="PH_OUT" value="."/>
+      <env key="PH_ROOT" value="."/>
+      <env key="PH_PIG" value="${pig.dir}"/>
+      <env key="PH_OLDPIG" value="${pig.harness.old.pig}"/>
+      <env key="PH_CLUSTER" value="${pig.harness.cluster}"/>
+      <env key="PH_JYTHON_JAR" value="${jython.jar}"/>
+      <arg line="${tests.to.run}"/>
+      <arg value="${test.location}/tests/cmdline.conf"/>
+      <arg value="${test.location}/tests/multiquery.conf"/>
+      <arg value="${test.location}/tests/negative.conf"/>
+      <arg value="${test.location}/tests/nightly.conf"/>
+      <arg value="${test.location}/tests/streaming.conf"/>
+      <arg value="${test.location}/tests/turing_jython.conf"/>
+    </exec>
+  </target>
+
+  <target name="init-deploy">
+     <!-- For now default to the existing cluster deployer, since 
+    it's all there is.  Once the local deployer is available that
+    should be the default. -->
+    <property name="deploy.conf"
+        value="${test.location}/conf/existing_deployer.conf"/>
+  </target>
+
+  <target name="deploy-base" depends="property-check, tar, init-test, init-deploy">
+    <exec executable="./pig_test_harness.pl" dir="${test.location}">
+      <env key="PIG_HARNESS_ROOT" value="."/>
+      <env key="PH_LOCAL" value="."/>
+      <env key="PH_OUT" value="."/>
+      <env key="PH_ROOT" value="."/>
+      <env key="PH_PIG" value="${pig.dir}"/>
+      <env key="PH_OLDPIG" value="${pig.harness.old.pig}"/>
+      <env key="PH_CLUSTER" value="${pig.harness.cluster}"/>
+      <env key="PH_JYTHON_JAR" value="${jython.jar}"/>
+
+      <arg value="-deploycfg"/>
+      <arg value="${deploy.conf}"/>
+      <arg value="${deploy.opt}"/>
+      <!-- Give a bogus test so it just does the deployment -->
+      <arg value="-t"/>
+      <arg value="NoSuchTest"/>
+      <arg value="${test.location}/tests/nightly.conf"/>
+    </exec>
+  </target>
+
+  <target name="deploy">
+    <antcall target="deploy-base">
+      <param name="deploy.opt" value="-deploy"/>
+    </antcall>
+  </target>
+
+  <target name="undeploy">
+    <antcall target="deploy-base">
+      <param name="deploy.opt" value="-undeploy"/>
+    </antcall>
+  </target>
+
+  <target name="deploy-test" depends="deploy, test"/>
+
+  <target name="deploy-test-undeploy" depends="deploy, test, undeploy"/>
+
+  <target name="clean">
+    <delete dir="${test.location}"/>
+    <delete file="${tar.name}"/>
+    <delete dir="${tar.dir}"/>
+    <ant dir="${udf.java.dir}" target="clean"/>
+  </target>
+
+</project>
+
+
