@@ -282,7 +282,7 @@ $cfg = {
                         store c into ':OUTPATH:.1';
                         d = filter b by gpa > 3.0; 
                         store d into ':OUTPATH:.2';
-                        e = join c by gpa, d by gpa using "repl";
+                        e = join c by gpa, d by gpa using 'repl';
                         store e into ':OUTPATH:.3'; #,
             'sql' => "select name, age, gpa from studenttab10k where age > 50;
                       select name, age, gpa from studenttab10k where gpa > 3.0;
